@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2010-2016 by Walter Brisken                             *
+ *   Copyright (C) 2010-2017 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -74,9 +74,9 @@ const char verdate[] = "20140619";
 #define USEC_DAY        86400000000.0 
 
 
-int die = 0;
+volatile int die = 0;
 const int statsRange[] = { 75000, 150000, 300000, 600000, 1200000, 2400000, 4800000, -1 };
-
+struct sigaction old_sigint_action;
 
 enum ConditionMode
 {
@@ -127,9 +127,9 @@ static void usage(const char *pgm)
 
 void siginthand(int j)
 {
-	printf("SIGINT caught; aborting operation.\n");
-	fflush(stdout);
+	fprintf(stderr, "SIGINT caught; aborting operation.\n");
 	die = 1;
+	sigaction(SIGINT, &old_sigint_action, 0);
 }
 
 int getModuleLabel(SSHANDLE xlrDevice, int bank, char label[XLR_LABEL_LENGTH+1])
@@ -790,6 +790,7 @@ int main(int argc, char **argv)
 	int dirVersion = -1;
 	int lockWait = MARK5_LOCK_DONT_WAIT;
 	int retval = EXIT_SUCCESS;
+	struct sigaction new_sigint_action;
 
 	if(argc < 2)
 	{
@@ -958,7 +959,10 @@ int main(int argc, char **argv)
 		return EXIT_FAILURE;
 	}
 
-	signal(SIGINT, siginthand);
+	new_sigint_action.sa_handler = siginthand;
+	sigemptyset(&new_sigint_action.sa_mask);
+	new_sigint_action.sa_flags = 0;
+	sigaction(SIGINT, &new_sigint_action, &old_sigint_action);
 
 	/* 60 seconds should be enough to complete any XLR command */
 	setWatchdogTimeout(60);
